Fixed issue with overflowing x axis bc of aos

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -54,16 +54,15 @@
   .navigation-item {
     text-align: center;
     padding: 0.5rem;
-    width: 100%;
     display: table;
   }
 
   .menu-icon {
     display: block;
     position: fixed;
-    margin: 1.1rem 0rem;
     top: 0;
     right: 0;
+    margin-top: 0.5rem;
     transform: translate(-100%, 10%);
   }
 }
