--- a/src/components/ProjectGridRow/ProjectGridRow.css
+++ b/src/components/ProjectGridRow/ProjectGridRow.css
@@ -14,7 +14,6 @@
   bottom: 200px;
   left: 525px;
   height: 140px;
-  z-index: 1;
 }
 
 .div3 {
